# CognitiveAI

./: main.py  pyproject.toml  readme.md  requirements.txt
mcp/: mathserver.py  weather.py
notebooks/: Langchain.ipynb
practice/RAG/: data_ingestion.ipynb
practice/RAG/data/databases/: company.db
practice/langchain-graph/: Langgraph.ipynb
practice/mcp/: client.py
rag/: ingestion.py
