[project]
name = "cognitiveai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "chromadb>=1.5.9",
    "deepagents>=0.6.7",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "matplotlib>=3.11.0",
    "mcp>=1.27.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfminer>=20191125",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "unstructured[docx,pdf]>=0.23.1",
    "unstructured-client>=0.45.0",
    "wikipedia>=1.4.0",
    "python-magic>=0.4.27",
    "langchain-opendataloader-pdf>=2.0.0",
    "langchain-pymupdf4llm>=1.27.2",
    "langchain-chroma>=1.1.0",
]
